Changelog
=========

7.9-dev - (unreleased)
----------------------
* Bug fix: Display no results within folder_listing template
  if folderContents comes form faceted query and it's empty
  [voineali refs #16624]
* Bug fix: use proper class names for accordion panels in order to correctly
  display the accordion arrows
  [ichimdav refs #15237]

7.8 - (2013-08-28)
------------------
* Change: updated login_form.cpt and login_next.cpy with latest logic from
  Plone
  [ichimdav refs #16291]
* Bug fix: define portal_url within language_selector.pt
  [ichimdav refs #16291]

7.7 - (2013-08-22)
------------------
* Bug fix: no longer reference portal_syndication in templates since we use
  Plone 4.3 now
  [ichimdav refs #15969]

7.6 - (2013-08-19)
------------------
* Feature: display the text for full screen mode within TinyMCE in order to
  make it more obvious what the button does
  [ichimdav refs #14910]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #14323]
* Change: updated member.css with latest changes from plonetheme.sunburst
  [ichimdav refs #14323]
* Change: moved style customizations from eea-public to eea-portlets.css
  because of changes in plonetheme.sunburst
  [ichimdav refs #14323]
* Change: moved style customizations from eea-public to eea-base.css
  because of changes in plonetheme.sunburst
  [ichimdav refs #14323]
* Change: moved style customizations from eea-public to eea-authoring.css
  because of changes in plonetheme.sunburst
  [ichimdav refs #14323]

7.5 - (2013-08-09)
------------------
* Bug fix: fixed styles issues for TinyMCE from Plone 4.3
  [ichimdav refs #14323]

7.4 - (2013-08-07)
------------------
* Change: use base link instead of link alternative for site link now that
  kss is gone when referncing the base url
  [ichimdav refs #14323]
* Change: removed p4a.video dependency from setup.py
  [ichimdav #15234]