@@ -521,8 +521,4 @@ dl.actionMenu.activated dd {
     min-width: 50%;
 }
 
-/* #14365 table-caption doesn't work in ie */
-#visual-portal-wrapper ul.eea-tabs a {
-    display: block;
-}
 /* </dtml-with> */
